--- a/FooBarApp/CMakeLists.txt
+++ b/FooBarApp/CMakeLists.txt
@@ -1,24 +1,23 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.8.2)
 project(FooBarApp VERSION 1.0.0 LANGUAGES CXX)
 
-if(NOT TARGET FooBar::FooBar)
-	message(FATAL_ERROR "FooBarApp: missing dependencies")
-endif()
+find_package(FooBar)
 
 file(GLOB _SRCS "src/*.[hc]pp")
 
 add_executable(${PROJECT_NAME} ${_SRCS})
+# need to find FooBar AND Foo since Foo is a public dependencies of FooBar
 if(APPLE)
 	set_target_properties(${PROJECT_NAME} PROPERTIES
 		INSTALL_RPATH
 		"@loader_path/../FooBar;@loader_path/../Foo;@loader_path/../lib")
 elseif(UNIX AND NOT APPLE)
 	set_target_properties(${PROJECT_NAME} PROPERTIES
-		INSTALL_RPATH "$ORIGIN/../Foo:$ORIGIN/../FooBar:$ORIGIN/../lib")
+		INSTALL_RPATH "$ORIGIN/../FooBar:$ORIGIN/../Foo:$ORIGIN/../lib")
 endif()
-target_link_libraries(${PROJECT_NAME} FooBar::FooBar)
+target_link_libraries(${PROJECT_NAME} PRIVATE FooBar::FooBar)
 
-# TEST
+# Test
 include(CTest)
 if(BUILD_TESTING)
 	add_test(NAME FooBarApp_UT COMMAND FooBarApp)
