--- a/Foo/CMakeLists.txt
+++ b/Foo/CMakeLists.txt
@@ -12,7 +12,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 	PUBLIC_HEADER ${_HDRS}
 	VERSION ${PROJECT_VERSION})
 #target_link_libraries(${PROJECT_NAME} PUBLIC ...)
-add_library(CMakeCPP::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
+add_library(CMakeCpp::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 # Test
 include(CTest)
@@ -23,7 +23,7 @@ endif()
 # Install
 include(GNUInstallDirs)
 install(TARGETS ${PROJECT_NAME}
-	EXPORT CMakeCPPTargets
+	EXPORT CMakeCppTargets
 	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/foo
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
