--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
-sudo: required
 language: cpp
 matrix:
   include:
     - os: linux
-      dist: xenial
+      dist: bionic
       compiler: clang
     - os: linux
-      dist: xenial
+      dist: bionic
       compiler: gcc
     - os: osx
       compiler: clang
