--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,7 +8,7 @@ environment:
   MSBUILD_FLAGS: /verbosity:minimal /maxcpucount
   matrix:
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    CMAKE_GENERATOR: "Visual Studio 16 2019 Win64"
+    CMAKE_GENERATOR: "Visual Studio 16 2019"
 
 matrix:
   fast_finish: true
