Add ccache to Travis-CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: cpp
+cache:
+  ccache: true
+
 matrix:
   include:
     - os: linux
@@ -12,12 +15,13 @@ matrix:
     - os: osx
       compiler: gcc
 
-before_install:
+install:
   - eval "${MATRIX_EVAL}"
 #  - if [ $TRAVIS_OS_NAME == linux ]; then sudo apt-get -qq update; fi
 #  - if [ $TRAVIS_OS_NAME == osx ]; then sudo chown -R $(whoami) /usr/local; fi
-  # Avoid bug on CI with OSX, see https://github.com/travis-ci/travis-ci/issues/8552
+#  # Avoid bug on CI with OSX, see https://github.com/travis-ci/travis-ci/issues/8552
 #  - if [ $TRAVIS_OS_NAME == osx ]; then brew update; fi
+  - if [ $TRAVIS_OS_NAME == osx ]; then brew install ccache; export PATH="/usr/local/opt/ccache/libexec:$PATH"; fi
 
 script:
   - cmake --version
