--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,24 +2,25 @@ version: '{build}'
 shallow_clone: true
 
 platform: x64
-configuration: Debug
+configuration:
+  - Debug
+  - Release
 
 environment:
   MSBUILD_FLAGS: /verbosity:minimal /maxcpucount
   matrix:
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    CMAKE_GENERATOR: "Visual Studio 16 2019"
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019 
 
 matrix:
   fast_finish: true
 
 before_build:
   - cmake --version
-  - cmake -S. -Bbuild -G "%CMAKE_GENERATOR%"
+  - cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=%configuration%
 
 build_script:
-  - cmake --build build --target ALL_BUILD -- %MSBUILD_FLAGS%
+  - cmake --build build --config %configuration% --target ALL_BUILD -- %MSBUILD_FLAGS%
 
 test_script:
-  - cmake --build build --target RUN_TESTS -- %MSBUILD_FLAGS%
+  - cmake --build build --config %configuration% --target RUN_TESTS -- %MSBUILD_FLAGS%
 
