--- a/ci/docker/opensuse/Dockerfile
+++ b/ci/docker/opensuse/Dockerfile
@@ -31,4 +31,4 @@ FROM env AS install
 COPY --from=devel /usr/local /usr/local/
 # Copy  sample
 WORKDIR /home/sample
-COPY .ci/sample .
+COPY ci/sample .
