--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -100,7 +100,7 @@ jobs:
     - name: Test
       run: cmake --build build --config Release --target test -v
     - name: Install
-      run: cmake --build build --config Release --target install -v
+      run: cmake --build build --config Release --target install -v -- DESTDIR=install
   build-macos:
     runs-on: macos-latest
     steps:
