--- a/Bar/CMakeLists.txt
+++ b/Bar/CMakeLists.txt
@@ -1,31 +1,34 @@
-cmake_minimum_required(VERSION 3.8.2)
-project(Bar VERSION 1.0.0 LANGUAGES CXX)
+add_library(Bar "")
+target_sources(Bar
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/bar/Bar.hpp>
+    $<INSTALL_INTERFACE:include/bar/Bar.hpp>
+  PRIVATE
+    src/Bar.cpp
+)
+target_include_directories(Bar
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
+target_compile_features(Bar PUBLIC cxx_std_11)
+set_target_properties(Bar PROPERTIES
+  VERSION ${PROJECT_VERSION}
+  PUBLIC_HEADER $<TARGET_PROPERTY:Bar,INTERFACE_SOURCES>
+)
+#target_link_libraries(Bar PUBLIC ...)
+add_library(${PROJECT_NAME}::Bar ALIAS Bar)
 
-file(GLOB _HDRS "include/bar/*.hpp" "include/bar/*.hxx")
-file(GLOB _SRCS "src/*.[hc]pp")
-
-add_library(${PROJECT_NAME} ${_HDRS} ${_SRCS})
-target_include_directories(${PROJECT_NAME} PUBLIC
-	$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-	$<INSTALL_INTERFACE:include>)
-set_target_properties(${PROJECT_NAME} PROPERTIES
-	PUBLIC_HEADER ${_HDRS}
-	VERSION ${PROJECT_VERSION})
-#target_link_libraries(${PROJECT_NAME} PUBLIC ...)
-add_library(CMakeCpp::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
-
-# Test
-include(CTest)
 if(BUILD_TESTING)
-	add_subdirectory(test)
+  add_subdirectory(test)
 endif()
 
 # Install
 include(GNUInstallDirs)
-install(TARGETS ${PROJECT_NAME}
-	EXPORT CMakeCppTargets
-	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/bar
-	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-	#RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-	)
+install(TARGETS Bar
+  EXPORT ${PROJECT_NAME}Targets
+  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/bar
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  #RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
