--- a/Foo/CMakeLists.txt
+++ b/Foo/CMakeLists.txt
@@ -1,31 +1,34 @@
-cmake_minimum_required(VERSION 3.8.2)
-project(Foo VERSION 1.0.0 LANGUAGES CXX)
+add_library(Foo "")
+target_sources(Foo
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/foo/Foo.hpp>
+    $<INSTALL_INTERFACE:include/foo/Foo.hpp>
+  PRIVATE
+    src/Foo.cpp
+  )
+target_include_directories(Foo
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+  )
+target_compile_features(Foo PUBLIC cxx_std_11)
+set_target_properties(Foo PROPERTIES
+  VERSION ${PROJECT_VERSION}
+  PUBLIC_HEADER $<TARGET_PROPERTY:Foo,INTERFACE_SOURCES>
+  )
+#target_link_libraries(Foo PUBLIC ...)
+add_library(${PROJECT_NAME}::Foo ALIAS Foo)
 
-file(GLOB _HDRS "include/foo/*.hpp" "include/foo/*.hxx")
-file(GLOB _SRCS "src/*.[hc]pp")
-
-add_library(${PROJECT_NAME} ${_HDRS} ${_SRCS})
-target_include_directories(${PROJECT_NAME} PUBLIC
-	$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-	$<INSTALL_INTERFACE:include>)
-set_target_properties(${PROJECT_NAME} PROPERTIES
-	PUBLIC_HEADER ${_HDRS}
-	VERSION ${PROJECT_VERSION})
-#target_link_libraries(${PROJECT_NAME} PUBLIC ...)
-add_library(CMakeCpp::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
-
-# Test
-include(CTest)
 if(BUILD_TESTING)
-	add_subdirectory(test)
+  add_subdirectory(test)
 endif()
 
 # Install
 include(GNUInstallDirs)
-install(TARGETS ${PROJECT_NAME}
-	EXPORT CMakeCppTargets
-	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/foo
-	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-	#RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-	)
+install(TARGETS Foo
+  EXPORT ${PROJECT_NAME}Targets
+  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/foo
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  #RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+  )
