--- a/FooBarApp/CMakeLists.txt
+++ b/FooBarApp/CMakeLists.txt
@@ -1,33 +1,30 @@
-cmake_minimum_required(VERSION 3.8.2)
-project(FooBarApp VERSION 1.0.0 LANGUAGES CXX)
-
-find_target(CMakeCpp::FooBar CMakeCpp REQUIRED CONFIG)
-
-file(GLOB _SRCS "src/*.[hc]pp")
-
-add_executable(${PROJECT_NAME} ${_SRCS})
-# need to find FooBar AND Foo since Foo is a public dependencies of FooBar
+add_executable(FooBarApp "")
+target_sources(FooBarApp
+  PRIVATE
+    src/main.cpp
+  )
+target_compile_features(FooBarApp PUBLIC cxx_std_11)
+set_target_properties(FooBarApp PROPERTIES
+  VERSION ${PROJECT_VERSION})
+# note: macOS is APPLE and also UNIX !
 if(APPLE)
-	set_target_properties(${PROJECT_NAME} PROPERTIES
-		INSTALL_RPATH
-		"@loader_path/../FooBar;@loader_path/../Foo;@loader_path/../lib")
+  set_target_properties(FooBarApp PROPERTIES
+    INSTALL_RPATH "@loader_path/../lib")
 elseif(UNIX AND NOT APPLE)
-	set_target_properties(${PROJECT_NAME} PROPERTIES
-		INSTALL_RPATH "$ORIGIN/../FooBar:$ORIGIN/../Foo:$ORIGIN/../lib")
+  set_target_properties(FooBarApp PROPERTIES
+    INSTALL_RPATH "$ORIGIN/../lib")
 endif()
-target_link_libraries(${PROJECT_NAME}
-	PRIVATE CMakeCpp::FooBar)
-add_executable(CMakeCpp::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
+target_link_libraries(FooBarApp
+  PRIVATE
+  ${PROJECT_NAME}::FooBar
+  )
+add_executable(${PROJECT_NAME}::FooBarApp ALIAS FooBarApp)
 
-# Test
-include(CTest)
-if(BUILD_TESTING)
-	add_test(NAME FooBarApp_UT COMMAND FooBarApp)
-endif()
+add_test(NAME FooBarAppTest COMMAND FooBarApp)
 
 # Install
 include(GNUInstallDirs)
-install(TARGETS ${PROJECT_NAME}
-	EXPORT CMakeCppTargets
-	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-	)
+install(TARGETS FooBarApp
+  EXPORT ${PROJECT_NAME}Targets
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+  )
