--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,15 @@ jobs:
 install:
   # See https://docs.travis-ci.com/user/caching/#ccache-on-macos
   - if [ $TRAVIS_OS_NAME == osx ]; then brew install ccache; export PATH="/usr/local/opt/ccache/libexec:$PATH"; fi
+  - if [ $TRAVIS_OS_NAME == linux ]; then
+    wget "https://cmake.org/files/v3.16/cmake-3.16.4-Linux-x86_64.sh"
+    && chmod a+x cmake-3.16.4-Linux-x86_64.sh
+    && ./cmake-3.16.4-Linux-x86_64.sh --prefix=/usr --skip-license
+    && rm cmake-3.16.4-Linux-x86_64.sh;
+    fi
 
 script:
   - cmake --version
-  - cmake -H. -Bbuild
+  - cmake -S. -Bbuild
   - cmake --build build --target all
   - cmake --build build --target test
