--- a/ci/docker/archlinux/Dockerfile
+++ b/ci/docker/archlinux/Dockerfile
@@ -1,11 +1,10 @@
 # Create a virtual environment with all tools installed
 # ref: https://hub.docker.com/_/archlinux/
 FROM archlinux/base AS env
-LABEL maintainer="corentinl@google.com"
+LABEL maintainer="mizux.dev@gmail.com"
 # Install system build dependencies
-ENV PATH=$PATH:/usr/local/bin
+ENV PATH=/usr/local/bin:$PATH
 RUN pacman -Syu --noconfirm git base-devel cmake
-
 CMD [ "/bin/sh" ]
 
 # Add the library src to our build env
@@ -14,6 +13,8 @@ FROM env AS devel
 WORKDIR /home/lib
 # Bundle lib source
 COPY . .
+# CMake version
+RUN cmake -version
 # CMake configure
 RUN cmake -S. -Bbuild
 # CMake build
