--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,9 @@ install:
   - if [ $TRAVIS_OS_NAME == linux ]; then
     wget "https://cmake.org/files/v3.16/cmake-3.16.4-Linux-x86_64.sh"
     && chmod a+x cmake-3.16.4-Linux-x86_64.sh
-    && ./cmake-3.16.4-Linux-x86_64.sh --prefix=/usr --skip-license
-    && rm cmake-3.16.4-Linux-x86_64.sh;
+    && ./cmake-3.16.4-Linux-x86_64.sh --prefix=/usr/local/ --skip-license
+    && rm cmake-3.16.4-Linux-x86_64.sh
+    && export PATH=/usr/local/bin:"${PATH}";
     fi
 
 script:
