--- a/ci/Makefile
+++ b/ci/Makefile
@@ -17,12 +17,26 @@ help:
 	@echo -e "${BOLD}MAKE TARGETS${RESET}"
 	@echo -e "\t${BOLD}help${RESET}: display this help and exit."
 	@echo
-	@echo -e "\t${BOLD}env${RESET}: build a virtual env image."
-	@echo -e "\t${BOLD}sh_env_<distro>${RESET}: run a container using the virtual env image (debug purpose)."
+	@echo -e "\t${BOLD}env${RESET}: build all env docker images."
+	@echo -e "\t${BOLD}env_<distro>${RESET}: build the env docker image for a specific distro."
+	@echo -e "\t${BOLD}save_env${RESET}: Save all env docker images."
+	@echo -e "\t${BOLD}save_env_<distro>${RESET}: Save the env docker image for a specific distro."
+	@echo -e "\t${BOLD}sh_env_<distro>${RESET}: run a container using the env docker image (debug purpose)."
 	@echo
-	@echo -e "\t${BOLD}devel${RESET}: build the library using all devel images."
-	@echo -e "\t${BOLD}devel_<distro>${RESET}: build the library using a specific devel image."
-	@echo -e "\t${BOLD}test_<distro>${RESET}: auto test using the devel image."
+	@echo -e "\t${BOLD}devel${RESET}: build all devel docker images."
+	@echo -e "\t${BOLD}devel_<distro>${RESET}: build the devel docker image for a specific distro."
+	@echo -e "\t${BOLD}save_devel${RESET}: Save all devel docker images."
+	@echo -e "\t${BOLD}save_devel_<distro>${RESET}: Save the devel docker image for a specific distro."
+	@echo -e "\t${BOLD}sh_devel_<distro>${RESET}: run a container using the devel docker image (debug purpose)."
+	@echo
+	@echo -e "\t${BOLD}build${RESET}: build all build docker images."
+	@echo -e "\t${BOLD}build_<distro>${RESET}: build the build docker image for a specific distro."
+	@echo -e "\t${BOLD}save_build${RESET}: Save all build docker images."
+	@echo -e "\t${BOLD}save_build_<distro>${RESET}: Save the build docker image for a specific distro."
+	@echo -e "\t${BOLD}sh_build_<distro>${RESET}: run a container using the build docker image (debug purpose)."
+	@echo
+	@echo -e "\t${BOLD}test${RESET}: test using all build docker images."
+	@echo -e "\t${BOLD}test_<distro>${RESET}: test using the build image."
 	@echo -e "\t${BOLD}sh_<distro>${RESET}: run a container using the devel image (debug purpose)."
 	@echo
 	@echo -e "\t${BOLD}install${RESET}: execute the cmake target ${BOLD}install${RESET} using all devel image container, then create an install image with it."
@@ -35,13 +49,13 @@ help:
 	@echo -e "\t${BOLD}clean_<distro>${RESET}: Remove cache and docker image for the specified distro."
 	@echo
 	@echo -e "\t${BOLD}<distro>${RESET}:"
-	@echo -e "\t\t${BOLD}alpine${RESET} (latest)"
+	@echo -e "\t\t${BOLD}alpine${RESET} (edge)"
 	@echo -e "\t\t${BOLD}archlinux${RESET} (latest)"
 	@echo -e "\t\t${BOLD}centos${RESET} (latest)"
+	@echo -e "\t\t${BOLD}debian${RESET} (latest)"
 	@echo -e "\t\t${BOLD}fedora${RESET} (latest)"
 	@echo -e "\t\t${BOLD}opensuse${RESET} (tumbleweed)"
-	@echo -e "\t\t${BOLD}debian${RESET} (latest)"
-	@echo -e "\t\t${BOLD}ubuntu${RESET} (latest)"
+	@echo -e "\t\t${BOLD}ubuntu${RESET} (rolling)"
 	@echo -e "\te.g. 'make test_ubuntu'"
 	@echo
 	@echo -e "\t${BOLD}NOCACHE=1${RESET}: use 'docker build --no-cache' when building container (default use cache)."
@@ -75,74 +89,124 @@ endif
 DOCKER_RUN_CMD := docker run --rm --init --net=host
 
 # Currently supported distro
-DISTROS = alpine archlinux centos fedora opensuse debian ubuntu
+DISTROS = alpine archlinux centos debian fedora opensuse ubuntu
 
 # $* stem
 # $< first prerequist
 # $@ target name
 
-# ENV
+
+## ENV ##
+# Build the env image.
 targets = $(addprefix env_, $(DISTROS))
 .PHONY: env $(targets)
 env: $(targets)
-$(targets): env_%: cache/%/docker_env.tar
-cache/%/docker_env.tar: docker/%/Dockerfile
-	@docker image rm -f ${IMAGE}_$*:env 2>/dev/null
-	${DOCKER_BUILD_CMD} --target=env --tag ${IMAGE}_$*:env -f $< docker/$*
+$(targets): env_%: docker/%/Dockerfile
+	@docker image rm -f ${IMAGE}:$*_env 2>/dev/null
+	${DOCKER_BUILD_CMD} --target=env --tag ${IMAGE}:$*_env -f $< docker/$*
+
+# Save the env image (debug).
+targets = $(addprefix save_env_, $(DISTROS))
+.PHONY: save_env $(targets)
+save_env: $(targets)
+$(targets): save_env_%: cache/%/docker_env.tar
+cache/%/docker_env.tar: env_%
 	@rm -f $@
 	mkdir -p cache/$*
-	docker save ${IMAGE}_$*:env -o $@
+	docker save ${IMAGE}:$*_env -o $@
 
-# Run a container using the env image.
+# Run a container using the env image (debug).
 targets = $(addprefix sh_env_, $(DISTROS))
 .PHONY: $(targets)
-$(targets): sh_env_%: cache/%/docker_env.tar
-	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$* ${IMAGE}_$*:env /bin/sh
+$(targets): sh_env_%: env_%
+	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$* ${IMAGE}:$*_env /bin/sh
 
-# DEVEL
+
+## DEVEL ##
+# Build the devel image.
 targets = $(addprefix devel_, $(DISTROS))
 .PHONY: devel $(targets)
 devel: $(targets)
-$(targets): devel_%: cache/%/docker_devel.tar
-cache/%/docker_devel.tar: docker/%/Dockerfile \
- ../CMakeLists.txt ../cmake
-	@docker image rm -f ${IMAGE}_$*:devel 2>/dev/null
-	${DOCKER_BUILD_CMD} --target=devel --tag ${IMAGE}_$*:devel -f $< ..
+$(targets): devel_%: docker/%/Dockerfile ../CMakeLists.txt ../cmake
+	@docker image rm -f ${IMAGE}:$*_devel 2>/dev/null
+	${DOCKER_BUILD_CMD} --target=devel --tag ${IMAGE}:$*_devel -f $< ..
+
+# Save the devel image (debug).
+targets = $(addprefix save_devel_, $(DISTROS))
+.PHONY: save_devel $(targets)
+save_devel: $(targets)
+$(targets): save_devel_%: cache/%/docker_devel.tar
+cache/%/docker_devel.tar: devel_%
 	@rm -f $@
 	mkdir -p cache/$*
-	docker save ${IMAGE}_$*:devel -o $@
+	docker save ${IMAGE}:$*_devel -o $@
 
-# DOCKER BASH INSTALL (debug)
+# Run a container using the devel image (debug).
 targets = $(addprefix sh_devel_, $(DISTROS))
 .PHONY: $(targets)
-$(targets): sh_devel_%: cache/%/docker_devel.tar
-	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$* ${IMAGE}_$*:devel /bin/sh
+$(targets): sh_devel_%: devel_%
+	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$* ${IMAGE}:$*_devel /bin/sh
 
-# TEST DEVEL
+
+## BUILD ##
+# Build the build image.
+targets = $(addprefix build_, $(DISTROS))
+.PHONY: build $(targets)
+build: $(targets)
+$(targets): build_%: docker/%/Dockerfile ../CMakeLists.txt ../cmake
+	@docker image rm -f ${IMAGE}:$*_build 2>/dev/null
+	${DOCKER_BUILD_CMD} --target=build --tag ${IMAGE}:$*_build -f $< ..
+
+# Save the build image (debug).
+targets = $(addprefix save_build_, $(DISTROS))
+.PHONY: save_build $(targets)
+save_build: $(targets)
+$(targets): save_build_%: cache/%/docker_build.tar
+cache/%/docker_build.tar: build_%
+	@rm -f $@
+	mkdir -p cache/$*
+	docker save ${IMAGE}:$*_build -o $@
+
+# Run a container using the build image (debug).
+targets = $(addprefix sh_build_, $(DISTROS))
+.PHONY: $(targets)
+$(targets): sh_build_%: build_%
+	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$* ${IMAGE}:$*_build /bin/sh
+
+
+## TEST ##
+# Run the tests.
 targets = $(addprefix test_, $(DISTROS))
 .PHONY: test $(targets)
 test: $(targets)
-$(targets): test_%: cache/%/docker_devel.tar
-	${DOCKER_RUN_CMD} -t --name ${IMAGE}_$* ${IMAGE}_$*:devel cmake --build build --target test
+$(targets): test_%: build_%
+	${DOCKER_RUN_CMD} -t --name ${IMAGE}_$* ${IMAGE}:$*_build \
+ cmake --build build --target test
 
-# INSTALL
+## INSTALL ##
+# Build the instqll image.
 targets = $(addprefix install_, $(DISTROS))
 .PHONY: install $(targets)
 install: $(targets)
-$(targets): install_%: cache/%/docker_install.tar
+$(targets): install_%: docker/%/Dockerfile sample
+	@docker image rm -f ${IMAGE}:$*_install 2>/dev/null
+	${DOCKER_BUILD_CMD} --target=install --tag ${IMAGE}:$*_install -f $< ..
+
+# Save the install image (debug).
+targets = $(addprefix save_install_, $(DISTROS))
+.PHONY: save_install $(targets)
+save_install: $(targets)
+$(targets): save_install_%: cache/%/docker_install.tar
 cache/%/docker_install.tar: docker/%/Dockerfile \
- sample
-	@docker image rm -f ${IMAGE}_$*:install 2>/dev/null
-	${DOCKER_BUILD_CMD} --target=install --tag ${IMAGE}_$*:install -f $< ..
 	@rm -f $@
 	mkdir -p cache/$*
-	docker save ${IMAGE}_$*:install -o $@
+	docker save ${IMAGE}:$*_install -o $@
 
 # DOCKER BASH INSTALL (debug)
 targets = $(addprefix sh_install_, $(DISTROS))
 .PHONY: $(targets)
 $(targets): sh_install_%: cache/%/docker_install.tar
-	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$* ${IMAGE}_$*:install /bin/sh
+	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$* ${IMAGE}:$*_install /bin/sh
 
 # TEST INSTALL
 targets = $(addprefix test_install_, $(DISTROS))
@@ -150,7 +214,7 @@ targets = $(addprefix test_install_, $(DISTROS))
 test_install: $(targets)
 $(targets): test_install_%: cache/%/docker_install.tar sample
 	@docker load -i cache/$*/docker_install.tar
-	${DOCKER_RUN_CMD} -t --name ${IMAGE}_$* ${IMAGE}_$*:install /bin/sh -c \
+	${DOCKER_RUN_CMD} -t --name ${IMAGE}_$* ${IMAGE}:$*_install /bin/sh -c \
  "cmake -H. -Bbuild; \
  cmake --build build --target all; \
  cmake --build build --target test; \
@@ -164,10 +228,12 @@ clean: $(targets)
 $(targets): clean_%:
 	docker container prune -f
 	docker image prune -f
-	-docker image rm -f ${IMAGE}_$*:install 2>/dev/null
-	-docker image rm -f ${IMAGE}_$*:devel 2>/dev/null
-	-docker image rm -f ${IMAGE}_$*:env 2>/dev/null
+	-docker image rm -f ${IMAGE}:$*_install 2>/dev/null
+	-docker image rm -f ${IMAGE}:$*_build 2>/dev/null
+	-docker image rm -f ${IMAGE}:$*_devel 2>/dev/null
+	-docker image rm -f ${IMAGE}:$*_env 2>/dev/null
 	-rm -f cache/$*/docker_install.tar
+	-rm -f cache/$*/docker_build.tar
 	-rm -f cache/$*/docker_devel.tar
 	-rm -f cache/$*/docker_env.tar
 	-rmdir cache/$*
