--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,101 +3,107 @@ name: Docker
 on: [push, pull_request]
 
 jobs:
-  build-alpine:
+  Alpine:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Build env image
-      run: make --directory=ci env_alpine
+      run: make --directory=ci alpine_env
     - name: Build devel project
-      run: make --directory=ci devel_alpine
+      run: make --directory=ci alpine_devel
     - name: Build project
-      run: make --directory=ci build_alpine
+      run: make --directory=ci alpine_build
     - name: Test project
-      run: make --directory=ci test_alpine
+      run: make --directory=ci alpine_test
     - name: Test Install project
-      run: make --directory=ci test_install_alpine
-  build-archlinux:
+      run: make --directory=ci alpine_install_test
+
+  Archlinux:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Build env image
-      run: make --directory=ci env_archlinux
+      run: make --directory=ci archlinux_env
     - name: Build devel project
-      run: make --directory=ci devel_archlinux
+      run: make --directory=ci archlinux_devel
     - name: Build project
-      run: make --directory=ci build_archlinux
+      run: make --directory=ci archlinux_build
     - name: Test project
-      run: make --directory=ci test_archlinux
+      run: make --directory=ci archlinux_test
     - name: Test Install project
-      run: make --directory=ci test_install_archlinux
-  build-centos:
+      run: make --directory=ci archlinux_install_test
+
+  Centos:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Build env image
-      run: make --directory=ci env_centos
+      run: make --directory=ci centos_env
     - name: Build devel project
-      run: make --directory=ci devel_centos
+      run: make --directory=ci centos_devel
     - name: Build project
-      run: make --directory=ci build_centos
+      run: make --directory=ci centos_build
     - name: Test project
-      run: make --directory=ci test_centos
+      run: make --directory=ci centos_test
     - name: Test Install project
-      run: make --directory=ci test_install_centos
-  build-debian:
+      run: make --directory=ci centos_install_test
+
+  Debian:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Build env image
-      run: make --directory=ci env_debian
+      run: make --directory=ci debian_env
     - name: Build devel project
-      run: make --directory=ci devel_debian
+      run: make --directory=ci debian_devel
     - name: Build project
-      run: make --directory=ci build_debian
+      run: make --directory=ci debian_build
     - name: Test project
-      run: make --directory=ci test_debian
+      run: make --directory=ci debian_test
     - name: Test Install project
-      run: make --directory=ci test_install_debian
-  build-fedora:
+      run: make --directory=ci debian_install_test
+
+  Fedora:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Build env image
-      run: make --directory=ci env_fedora
+      run: make --directory=ci fedora_env
     - name: Build devel project
-      run: make --directory=ci devel_fedora
+      run: make --directory=ci fedora_devel
     - name: Build project
-      run: make --directory=ci build_fedora
+      run: make --directory=ci fedora_build
     - name: Test project
-      run: make --directory=ci test_fedora
+      run: make --directory=ci fedora_test
     - name: Test Install project
-      run: make --directory=ci test_install_fedora
-  build-opensuse:
+      run: make --directory=ci fedora_install_test
+
+  OpenSuse:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
     - name: Build env image
-      run: make --directory=ci env_opensuse
+      run: make --directory=ci opensuse_env
     - name: Build devel project
-      run: make --directory=ci devel_opensuse
+      run: make --directory=ci opensuse_devel
     - name: Build project
-      run: make --directory=ci build_opensuse
+      run: make --directory=ci opensuse_build
     - name: Test project
-      run: make --directory=ci test_opensuse
+      run: make --directory=ci opensuse_test
     - name: Test Install project
-      run: make --directory=ci test_install_opensuse
-  build-ubuntu:
+      run: make --directory=ci opensuse_install_test
+
+  Ubuntu:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
     - name: Build env image
-      run: make --directory=ci env_ubuntu
+      run: make --directory=ci ubuntu_env
     - name: Build devel project
-      run: make --directory=ci devel_ubuntu
+      run: make --directory=ci ubuntu_devel
     - name: Build project
-      run: make --directory=ci build_ubuntu
+      run: make --directory=ci ubuntu_build
     - name: Test project
-      run: make --directory=ci test_ubuntu
+      run: make --directory=ci ubuntu_test
     - name: Test Install project
-      run: make --directory=ci test_install_ubuntu
+      run: make --directory=ci ubuntu_install_test
